feat(dev): completion for view pbv6 backtest result
